Bug 498475 - Unable to see my password in the SMTP configuration dialog
Summary: Unable to see my password in the SMTP configuration dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-10 14:09 UTC by Allen Winter
Modified: 2025-03-17 14:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2025-01-10 14:09:39 UTC
I go to modify my smtp setup in the sending configuration
The password field is filled in with blobs.  I'd like to be able to see what password I used rather than hunting down my kwallet settings.  The "eyeball" is missing

note that that the receiving configuration does have an eyeball on the password field
Comment 1 Allen Winter 2025-01-10 14:38:37 UTC
possibly related:  when I RMB in the password field to paste in my password string, the context menu does not appear directly over my mouse location.  instead is appears (probably unparented) all the way to the left of the screen
Comment 2 Bug Janitor Service 2025-03-17 13:29:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kmailtransport/-/merge_requests/44
Comment 3 Allen Winter 2025-03-17 14:36:31 UTC
Git commit 254d0c3aec3d428c6c8864390f58163f84188ded by Allen Winter.
Committed on 17/03/2025 at 13:26.
Pushed by winterz into branch 'master'.

In the smtpconfigwidget, allow revealing the password after loading

In the SMTP configuration wigdget, enable password reveal after
the password is loaded from the transport.

It's nice to be able to see your passwords even after they've
been stored.

M  +2    -0    src/plugins/smtp/smtpconfigwidget.cpp

https://invent.kde.org/pim/kmailtransport/-/commit/254d0c3aec3d428c6c8864390f58163f84188ded
Comment 4 Allen Winter 2025-03-17 14:36:53 UTC
Git commit e745babe7bc3dda3fa77f8319c5f95e38948eaf2 by Allen Winter.
Committed on 17/03/2025 at 14:36.
Pushed by winterz into branch 'release/25.04'.

In the smtpconfigwidget, allow revealing the password after loading

In the SMTP configuration wigdget, enable password reveal after
the password is loaded from the transport.

It's nice to be able to see your passwords even after they've
been stored.


(cherry picked from commit 254d0c3aec3d428c6c8864390f58163f84188ded)

Co-authored-by: Allen Winter <winter@kde.org>

M  +2    -0    src/plugins/smtp/smtpconfigwidget.cpp

https://invent.kde.org/pim/kmailtransport/-/commit/e745babe7bc3dda3fa77f8319c5f95e38948eaf2