In the smtpconfigwidget, allow revealing the password after loading

In the SMTP configuration wigdget, enable password reveal after
the password is loaded from the transport.

It's nice to be able to see your passwords even after they've
been stored.

BUG: 498475


(cherry picked from commit 254d0c3aec3d428c6c8864390f58163f84188ded)

Co-authored-by: Allen Winter <winter@kde.org>