src/plugins/smtp/smtpconfigwidget.cpp
@@ -182,6 +182,8 @@ void SMTPConfigWidget::init()
     // load the password
     d->transport->updatePasswordState();
     if (d->transport->isComplete()) {
+        d->ui.password->setRevealPasswordMode(KAuthorized::authorize(QStringLiteral("lineedit_reveal_password")) ? KPassword::RevealMode::Always
+                                                                                                                 : KPassword::RevealMode::Never);
         d->ui.password->setPassword(d->transport->password());
     } else {
         if (d->transport->requiresAuthentication()) {
